--- a/container_management/wizard/container_wizard.xml
+++ b/container_management/wizard/container_wizard.xml
@@ -11,7 +11,7 @@
           
                     </group>
                     <group>
-                    <field name="container_id" required="1" options="{'no_quick_create': True}" domain="['|','|',('mhbl_id','=',False),('mhbl_id.mbl_no','=',context.get('default_mbl_no'))]" />
+                    <field name="container_id" required="1" options="{'no_quick_create': True}" domain="['|',('mhbl_id','=',False),('mhbl_id.mbl_no','=',context.get('default_mbl_no'))]" />
                     </group>
                     <footer>
                         <button name='set_lines'  string='Apply'  class='oe_highlight'  type='object'/>
