address,shipstation fix,flatrate on warehouse

--- a/sale_extension/views/sale_order_view.xml
+++ b/sale_extension/views/sale_order_view.xml
@@ -11,6 +11,21 @@
                 <xpath expr="//field[@name='payment_term_id']" position="after">
                     <field name="is_ebay_order" invisible="1"/>
                 </xpath>
+                <xpath expr="//field[@name='partner_shipping_id']" position="before">
+
+                    <label for="delivery_address"/>
+                    <!--                    <div class="o_row" name="height">-->
+                    <!--                        <field name="height" string="Height"/>-->
+                    <!--                        <span>Inches</span>-->
+                    <!--                    </div>-->
+                    <div class="o_row" style="height:80px;">
+                        <field name="delivery_address" groups="sale.group_delivery_invoice_address"
+                               attrs="{'readonly': [('state', 'not in', ['sale', 'sent', 'draft'])]}"
+                               class="apply_dimension"
+                               placeholder="Company Name(Optional) &#10;Contact Name &#10;Street &#10;City, State Code, Zip"/>
+                        <field name="delivery_created_id" force_save="1" invisible="1"/>
+                    </div>
+                </xpath>
             </field>
         </record>
     </data>
