--- a/container_management/views/container_config.xml
+++ b/container_management/views/container_config.xml
@@ -2,35 +2,58 @@
 <odoo>
     <data>
         <!-- inherited form view for ProdcutHTS configuration -->
-        <record id="container_config_settings" model="ir.ui.view">
-            <field name="name">container.config.settings</field>
-            <field name="model">container.config</field>
+        <!--        <record id="container_config_settings" model="ir.ui.view">-->
+        <!--            <field name="name">container.config.settings</field>-->
+        <!--            <field name="model">container.config</field>-->
+        <!--            <field name="arch" type="xml">-->
+        <!--                <form string="Configuration" name="container_config_form">-->
+        <!--                    &lt;!&ndash;                    <header>&ndash;&gt;-->
+        <!--                    &lt;!&ndash;                        <button string="Apply" type="object" name="execute" class="oe_highlight"/>&ndash;&gt;-->
+        <!--                    &lt;!&ndash;                        <button string="Cancel" type="object" name="cancel" class="oe_link"/>&ndash;&gt;-->
+        <!--                    &lt;!&ndash;                    </header>&ndash;&gt;-->
+        <!--                    <div id="main">-->
+        <!--                        <group col="4" string="Account Configuration">-->
+        <!--                            <group>-->
+        <!--                                <field name="freight_account_id"/>-->
+        <!--                                <field name="customs_clearence_account_id"/>-->
+        <!--                            </group>-->
+        <!--                        </group>-->
+        <!--                    </div>-->
+        <!--                </form>-->
+        <!--            </field>-->
+        <!--        </record>-->
+
+
+        <record id="container_config_company_settings" model="ir.ui.view">
+            <field name="name">Container Settings</field>
+            <field name="model">res.config.settings</field>
+            <field name="priority" eval="17"/>
+            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
             <field name="arch" type="xml">
-                <form string="Configuration" class="oe_form_configuration" name="container_config_form">
-                    <header>
-                        <button string="Apply" type="object" name="execute" class="oe_highlight"/>
-                        <button string="Cancel" type="object" name="cancel" class="oe_link"/>
-                    </header>
-                    <div id="main">
-                        <group col="4" string="Account Configuration">
-                            <group>
-                                <field name= "freight_account_id"/>
-                                <field name= "customs_clearence_account_id"/>
+                <xpath expr="//div[hasclass('settings')]" position="inside">
+                    <div class="app_settings_block" data-string="Container Management"
+                         data-key="container_management">
+                        <h2>Container Management Configuration</h2>
+                        <div class="row mt16 o_settings_container" id="container_account_config">
+                            <group string='Account Settings'>
+                                <field name="freight_account_id"/>
+                                <field name="customs_clearence_account_id"/>
                             </group>
-                        </group>
+                        </div>
                     </div>
-                </form>
+                </xpath>
             </field>
         </record>
 
-         <!-- Generic view for ProductHTS Configuration -->
-        <record id="container_config_menu_action" model="ir.actions.act_window">
+        <record id="container_config_menu_company_action" model="ir.actions.act_window">
             <field name="name">Settings</field>
-            <field name="res_model">container.config</field>
+            <field name="res_model">res.config.settings</field>
             <field name="view_mode">form</field>
             <field name="target">inline</field>
-            <field name="view_id" ref="container_config_settings"/>
+            <field name="view_id" ref="container_config_company_settings"/>
+            <field name="context">{'module' : 'container_management', 'bin_size': False}</field>
         </record>
+
 
     </data>
 </odoo>
