--- a/product_visibility_website/views/website_product_visibility.xml
+++ b/product_visibility_website/views/website_product_visibility.xml
@@ -29,7 +29,7 @@
             <field name="inherit_id" ref="website.res_config_settings_view_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[hasclass('app_settings_block')]/div[@id='website_selection_settings']" position="after">
-                    <div class="app_settings_block" data-string="Website" string="Website">
+                    <div >
                     <h2>Product Visibility</h2>
                     <div class="row mt16 o_settings_container">
                        <div class="col-12 col-lg-6 o_setting_box" >
