--- a/sale_extension/views/res_partner_view.xml
+++ b/sale_extension/views/res_partner_view.xml
@@ -4,6 +4,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='type']" position="before">
+                <field name="archive_delivery_address"/>
                 <field name="company_contact_id" attrs="{'invisible': [('is_company', '=', False)]}"/>
             </xpath>
         </field>
